[package]
name = "algo_practise"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rayon = "1.5.3"
num-bigint = { version = "0.4", optional = true }
num-traits = { version = "0.2", optional = true }
regex = "1.7.0"
lazy_static = "1.4.0"

[features]
default = ["big-math"]
big-math = ["dep:num-bigint", "dep:num-traits"]
